# robotick-engine

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  1_setup_my_env_as_root.linux.sh  1_setup_my_env_as_root.ubuntu.sh  2_setup_my_env_as_user.linux.sh  2_setup_my_env_as_user.ubuntu.sh  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  MUJOCO_LOG.TXT  README.md  TODO.md  brickpi3_simple_rc.yaml  build_and_run_example_desktop_main.sh  build_esp32.sh  build_esp32s3.sh  build_linux_arm32.sh  build_linux_arm64.sh  build_linux_debug.sh  build_linux_release.sh  build_run_tests_linux.sh  config_brickpi3_simple_rc.yaml  config_mujoco_test.yaml  docker-build-esp32s3.sh  docker-build-ubuntu.sh  docker-run-esp32s3.sh  docker-run-ubuntu.sh  ev3-interface-config-v0.5.json  ev3-interface-config-v2.json  ev3-interface-config.json  ev3-interface.py  git-setup.sh  goto_blink.ps1  hello-brickpi3.py  hello.py  make-feature-branch-from-dev.sh  mujoco_balancing_robot.xml  (+7 more)
cpp/: CMakeLists.bak  CMakeLists.txt  CMakeWorkloads.json
cpp/cmake/: RobotickWorkloadFilter.cmake  cmake
cpp/include/robotick/: api.h  api_base.h
cpp/include/robotick/config/: AssertUtils.h  FeatureFlags.h  PlatformDefaults.h  PlatformDefines.h
cpp/include/robotick/framework/: CommonMain.h  Engine.h  EngineInfo.h  FieldMacros.h  FieldUtils.h  FixedString.h  Model.h  Model0.h  Model_v1.h  TickInfo.h  WorkloadBase.h  WorkloadFactory.h  WorkloadInstanceInfo.h  WorkloadMacros.h  WorkloadRegistry.h  api.h  utils_pybind.h  utils_typename.h
cpp/include/robotick/framework/common/: Algorithm.h  ArrayView.h  FixedString.h  FixedVector.h  ForwardLinkedList.h  Function.h  Hash.h  HeapVector.h  InitializerList.h  List.h  Map.h  Memory.h  NoStd.h  NoStl.h  Pair.h  StringUtils.h  StringView.h  TypeTraits.h
cpp/include/robotick/framework/concurrency/: Atomic.h  Sync.h  Thread.h
cpp/include/robotick/framework/containers/: ArrayView.h  DynamicStructStorageVector.h  FixedVector.h  ForwardLinkedList.h  HeapVector.h  List.h  Map.h
cpp/include/robotick/framework/data/: Blackboard.h  Blackboard_v2.h  Buffer.h  DataConnection.h  FixedString.h  InProgressMessage.h  MessageHeader.h  MqttFieldSync.h  RemoteEngineConnection.h  RemoteEngineConnections.h  RemoteEngineDiscoverer.h  State.h  TelemetryServer.h  UDPDiscoveryManager.h  WorkloadsBuffer.h
cpp/include/robotick/framework/json/: Json.h
cpp/include/robotick/framework/math/: Abs.h  Clamp.h  IsFinite.h  LogExp.h  MathUtils.h  Pose.h  Pow.h  Quat.h  Sqrt.h  Transform.h  Trig.h  Vec2.h  Vec3.h
cpp/include/robotick/framework/memory/: Memory.h  StdApproved.h
cpp/include/robotick/framework/model/: DataConnectionSeed.h  Model.h  ModelLoader.h  ModelMacros.h  RemoteModelSeed.h  TelemetryPeerSeed.h  (+2 more)
cpp/include/robotick/framework/model-v2/: ModelMacros.h  RemoteModelSeed.h  WorkloadSeed.h  desktop_testbed_main.cpp
cpp/include/robotick/platform/: Atomic.h  Camera.h  Clock.h  MqttClient.h  NetworkManager.h  PlatformEvents.h  Renderer.h  Signals.h  Sync.h  System.h  Thread.h  ThreadSyncGroup.h  Threading.h  WebServer.h
cpp/src/robotick/framework/: Engine.cpp  EngineInfo.cpp  FieldRegistry.cpp  HelloWorkload.cpp  Model.cpp  Model_v1.cpp  PythonWorkload.cpp  SequenceWorkload.cpp  SyncedPairWorkload.cpp  TimingDiagnosticsWorkload.cpp  WorkloadFactory.cpp  WorkloadInstanceInfo.cpp  WorkloadRegistry.cpp  utils_pybind.cpp  utils_typename.cpp
cpp/src/robotick/platform/: Camera_desktop.cpp  Camera_esp32.cpp  MqttClient.cpp  NetworkManager.cpp  PlatformEvents.cpp  Renderer_desktop.cpp  Renderer_esp32.cpp  System_desktop.cpp  System_esp32.cpp  WebServer_desktop.cpp  WebServer_esp32.cpp
cpp/src/robotick/system/: PlatformEvents.cpp
cpp/src/robotick/workloads/: TemplateWorkload.cpp
cpp/tests/: CMakeLists.txt  main.cpp
cpp/tests/common/: HeapVector.test.cpp
cpp/tests/data/models/: test_model_1.yaml
cpp/tests/data/remote_control_interface_web/: index.html
cpp/tests/framework/: DummyWorkload.test.cpp  Engine.test.cpp  Engine_DataConnectionResolution.test.cpp  Model.test.cpp  Model_DataConnections.test.cpp  Model_v1.test.cpp  Model_v1_DataConnections.test.cpp  PythonWorkload.test.cpp  SequenceWorkload.test.cpp  SequencedGroupWorkload.test.cpp  SyncedGroupWorkload.test.cpp  SyncedGroupWorkload_TemporalOrdering.test.cpp  SyncedPairWorkload.test.cpp  WorkloadFactory.test.cpp  WorkloadFieldTraversal.test.cpp
cpp/tests/framework/common/: FixedString.test.cpp  FixedVector.test.cpp  ForwardLinkedList.test.cpp  HeapVector.test.cpp  List.test.cpp  Map.test.cpp
cpp/tests/framework/containers/: DynamicStructStorageVector.test.cpp  FixedVector.test.cpp  ForwardLinkedList.test.cpp  HeapVector.test.cpp  List.test.cpp  Map.test.cpp
cpp/tests/framework/data/: Blackboard.test.cpp  Buffer.test.cpp  DataConnection.test.cpp  MqttFieldSync.test.cpp  RemoteEngineConnection.test.cpp  RemoteEngineConnections.test.cpp  RemoteEngineDiscoverer.test.cpp  UDPDiscoveryManager.test.cpp
cpp/tests/framework/math/: Pose.test.cpp  Transform.test.cpp  Vec2.test.cpp  Vec3.test.cpp
cpp/tests/framework/model/: Model-Dynamic.test.cpp  Model-StaticConst.test.cpp  Model.test.cpp
cpp/tests/framework/model-v2/: Model_v2.test.cpp
cpp/tests/framework/registry/: DescriptorValidation.test.cpp  TypeRegistry.test.cpp  Types.test.cpp  WorkloadRegistry.test.cpp  WorkloadType.test.cpp
cpp/tests/framework/registry-v2/: Types.test.cpp  WorkloadType.test.cpp
cpp/tests/framework/strings/: FixedString.test.cpp
cpp/tests/framework/utils/: BlackboardTestUtils.h  EngineInspector.h  ModelHelper.h
cpp/tests/platform/: WebServer.test.cpp
cpp/tests/registry/: Types.test.cpp
cpp/tests/workloads/: PythonWorkload.test.cpp  SyncedGroupWorkload.test.cpp  TemplateWorkload.test.cpp
examples/cpp/desktop-testbed/: 1_build_desktop.sh  2_run_desktop.sh  CMakeLists.txt  CMakePresets.json  desktop_testbed_main.cpp  robotick_main.cpp
tests/cpp/: CMakeLists.txt  engine_tests.cpp
tests/cpp/framework/: Engine.test.cpp  PythonWorkload.test.cpp  SequenceWorkload.test.cpp  SyncedPairWorkload.test.cpp  WorkloadBase.test.cpp
(+332 files in other folders)
